# VSCodeDebug-Cmake-Make-TestTemplate

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
add/: add.c  add.h  makefile
dev/: dev.c  dev.h  makefile
inc/: pattern.h
main/: main.c  makefile
mul/: makefile
sub/: makefile
